--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "cross-env": "^5.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "node-sass": "^4.13.1",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
+    "babel-jest": "^25.4.0",
+    "jest": "^25.4.0",
+    "nodemon": "^2.0.3",
     "vue-jest": "^4.0.0-0"
   }
 }
