--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.16.4",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
