--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Eky Zulianto Arif",
   "private": true,
   "scripts": {
+    "deploy": "gh-pages -d build",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
@@ -14,6 +15,7 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
     "sass-loader": "^8.0.2",
