--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Eky Zulianto Arif",
   "private": true,
   "scripts": {
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
